--- a/tic-tac-toe/src/components/Board/index.scss
+++ b/tic-tac-toe/src/components/Board/index.scss
@@ -20,7 +20,12 @@
     font-family: 'headings', sans-serif;
     font-weight: 400;
     margin: 1px;
-    
+    color: rgb(23, 23, 23);
+}
+
+.boardTileButton:hover{
+    color: white;
+    background-color: black;
 }
 
 .boardContainer{
@@ -33,4 +38,36 @@
     align-content: center;
     padding: 10px;
     flex-direction: column;
+}
+
+.playAgainButton{
+    width: 220px;
+    height: 64px;
+    font-size: 26px;
+    font-family: 'headings', sans-serif;
+    font-weight: 400;
+    margin: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.469);
+}
+
+h1{
+    font-family: 'headings', sans-serif;
+    font-weight: 800;
+    color: black;
+}
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {
+    .boardTileButton{
+        width: 70px;
+        height: 64px;
+        font-size: 52px;
+        font-family: 'headings', sans-serif;
+        font-weight: 400;
+        margin: 1px;
+        color: rgb(23, 23, 23);
+    }
+    
 }
