--- a/tic-tac-toe/src/components/Main/index.scss
+++ b/tic-tac-toe/src/components/Main/index.scss
@@ -1,11 +1,40 @@
 .gameFrame{
     width: 40vw;
-    height: 70vh;
+    height: 80vh;
     border-radius: 20px;
-    box-shadow: 4px black;
-    background-color: aliceblue;
+    box-shadow: 6px 6px rgba(0, 0, 0, 0.611);
+    background-color: rgb(252, 246, 231);
     display: flex;
     justify-content: center;
     align-items: center;
     
+}
+
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: 576px) {
+    .gameFrame{
+        min-width: 90vw;
+        height: 80vh;
+        
+    }
+    
+}
+
+// Medium devices (tablets, 768px and up)
+@media (max-width: 800px) {
+    .gameFrame{
+        min-width: 90vw;
+        height: 80vh;
+        
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+ 
+}
+// Extra-large devices (large desktops, 1200px and up)
+@media (max-width: 1200px) {
+
 }
